# udf_infusion

./: .gitignore  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  README.win_x64.txt  README.win_x86.txt  config.h  config.h.in  configure  configure.ac  create.sql  db.awk  delete.sql  libtool  load.sql.sh  load.win.sql  udf_infusion.c  udf_infusion.sln  udf_infusion.vcxproj  udf_infusion.vcxproj.filters  unload.sql.sh  unload.win.sql
Downloads/: udf_infusion-1.0-x64.zip.asc  udf_infusion-1.0-x86.zip.asc
m4/: ax_mysql_bin.m4
src/: Makefile.am  Makefile.in  _quantile.cc  _translate_string.c  array.c  array.h  bound.c  bround.c  common.h  corr.c  covariance.c  cut.c  fnv.c  getint.c  group_first.c  group_last.c  invbit.c  isbit.c  kurtosis.c  lessavg.c  lesspart.c  lesspartpct.c  median.c  ngram.c  noverk.c  percentile_cont.c  percentile_disc.c  rotbit.c  rotint.c  row_number.c  rsumd.c  rsumi.c  setbit.c  setint.c  skewness.c  slug.c  stat_mode.c  stats_mode.c  xround.c
test/: Makefile.am  Makefile.in  corr.test  cut.test  generate_random_data  median.test  percentile_cont.test  percentile_disc.test  slug.test  stat_mode.test  stats_mode.test  test2result  test_clean.sql  test_env.py  test_prepare.sql
